--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,19 +31,16 @@ android {
 
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
-
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'com.google.firebase:firebase-auth:20.0.2'
-
     implementation 'com.google.firebase:firebase-database:19.6.0'
-
     implementation 'com.google.firebase:firebase-core:18.0.1'
-
     implementation 'androidx.cardview:cardview:1.0.0'
-
     implementation 'com.rengwuxian.materialedittext:library:2.1.4'
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+
+
 }
